--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">A-ExpenseTracker</string>
+
+    <string name="add_category">Add Category</string>
 </resources>
